added contact section without css and segregated media

--- a/SSA.html
+++ b/SSA.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="web_navigation_bar_collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="SSA.html">HOME <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">QUALITY</a>
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#">TECH-INFO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CONTACT US</a>
+          <a class="nav-link" href="#contact">CONTACT US</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown07XL" data-toggle="dropdown"
@@ -55,9 +55,6 @@
         <input class="form-control" type="text" placeholder="FIND YOUR INTERESTS..." aria-label="Search">
       </form>
     </div>
-    <div class="px-5">
-      <button class="btn btn-sm" data-id="nav_btn_login"> SUBSCRIBE</button>
-    </div>
   </nav>
 
  
@@ -69,7 +66,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://www.machinevideo.com/i/qrv/datas/image/ycinox/images/product/product1509960384340029.jpg" class=" w-100 " alt="Error loading image">
+        <img src="media/slideshow1.jpg" class=" w-100 " alt="Error loading image">
         <div class="carousel-caption d-none d-md-block">
           <h3>SSA SHEETS</h3>
         </div>
@@ -81,7 +78,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1547630824-eed1be6a27b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" class="d-block w-100" alt="Error loading image">
+        <img src="media/slideshow3.jpeg" class="d-block w-100" alt="Error loading image">
         <div class="carousel-caption d-none d-md-block">
           <h3>most trustful manufacturers!</h3>
         </div>
@@ -95,6 +92,23 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+  </div>
+
+
+  <!-- Contacts division below  -->
+
+  <div class="container" id="contact">
+    <h2>Contact Us</h2>
+    <h5>Address:</h5> 
+    <p>Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales eu eros vitae dapibus. Etiam tempor lacus magna, sed euismod mi blandit nec. Nullam rutrum dui tempus cursus volutpat. </p>
+
+    <h5>Mobile Number:</h5>
+    <p>123456789</p>
+    <p>134567890</p>
+
+    <h5>Email:</h5>
+    <p>test@test.com</p>
+
   </div>
 
 
