--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
    <link rel="stylesheet" href="css/responsive.css">
    <!-- building CSS -->
    <link rel="stylesheet" href="css/building.css">
+   <script src="https://smtpjs.com/v3/smtp.js"></script>
    </head>
    <body class="building_version" data-spy="scroll" data-target=".header">
       <!-- LOADER -->
@@ -561,42 +562,7 @@
                   </div>
                </div>
                <div class="col-md-8">
-                  <div class="contact_form">
-                     <div id="message"></div>
-                     <form id="contactform" class="row" action="contact.php" name="contactform" method="post">
-                        <fieldset class="row-fluid">
-                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                              <input type="text" name="first_name" id="first_name" class="form-control" placeholder="First Name">
-                           </div>
-                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                              <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name">
-                           </div>
-                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                              <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
-                           </div>
-                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                              <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Number">
-                           </div>
-                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                              <label class="sr-only">Select Department</label>
-                              <select name="select_service" id="select_service" class="selectpicker form-control" data-style="btn-white">
-                                 <option value="12">Select Service</option>
-                                 <option value="Building Service">SS ROD</option>
-                                 <option value="Tover Design">SS SHEETS</option>
-                                 <option value="Others">Others</option>
-                              </select>
-                           </div>
-                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                              <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Give us more details.."></textarea>
-                           </div>
-                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                              <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">submit</button>
-                           </div>
-                        </fieldset>
-                     </form>
-                  </div>
-               </div>
-               <!-- end col -->
+               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfYsl-7t-es_v0sd39da81bgIsKTPAR6OOwgvX34-_SGQlkDg/viewform?embedded=true" width="600" height="275" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <!-- end row -->
          </div>
@@ -689,7 +655,58 @@
       <!-- ALL PLUGINS -->
       <script src="js/custom.js"></script>
       <script src="js/portfolio.js"></script>
-      <script src="js/hoverdir.js"></script>   
+      <script src="js/hoverdir.js"></script>
+      <!-- <script type="text/javascript">
+         function sendEmail() {
+            Email.send({
+               SecureToken: "3b769261-4474-4544-b34c-ba11acbaa578",
+               To: ''
+               From: 'shatrunjayspecialalloy@gmail.com',
+               Subject: "Someone contacted you via your website.",
+               Body: "Hey there! Someone just tried to contact you via your website of Shatrunjay Special Alloy. Here are their details - "+"Name: " + document.getElementById('first_name').value + " " + document.getElementById('last_name').value + ", Email: " + document.getElementById('email').value + ", Number: " + document.getElementById('phone').value + ", Service: " + document.getElementById('select_service').value + ",  Details: " + document.getElementById('comments') 
+            }).then(
+               message => alert(message)
+            );
+         }
+      </script>  -->
    </body>
 </html>
 
+
+<!-- 
+<div class="contact_form">
+                     <div id="message"></div>
+                     <form id="contactform" class="row" name="contactform" method="post" role="form">
+                        <fieldset class="row-fluid">
+                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                              <input type="text" name="first_name" id="first_name" class="form-control" placeholder="First Name">
+                           </div>
+                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                              <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name">
+                           </div>
+                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                              <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
+                           </div>
+                           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                              <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Number">
+                           </div>
+                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                              <label class="sr-only">Select Department</label>
+                              <select name="select_service" id="select_service" class="selectpicker form-control" data-style="btn-white">
+                                 <option value="Default">Select Service</option>
+                                 <option value="SS ROD">SS ROD</option>
+                                 <option value="SS SHEETS">SS SHEETS</option>
+                                 <option value="Others">Others</option>
+                              </select>
+                           </div>
+                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                              <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Give us more details.."></textarea>
+                           </div>
+                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                              <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block" onclick="sendEmail()">Submit</button>
+                           </div>
+                        </fieldset>
+                     </form>
+                  </div>
+               </div> -->
+               <!-- end col -->
