--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="index.html"><img src="images/logo-icon1.png" alt="image"><span>SSA</span></a>
+                  <a class="navbar-brand" href="index.html"><img src="images/ssa_logo.png" alt="image"></a>
                </div>
                <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
                      <li class="active"><a data-scroll href="#home">Home</a></li>
                      <li><a data-scroll href="#about">About Us <span class="hidden-xs">*</span></a></li>
                      <li><a data-scroll href="#services">Services</a></li>
-                     <li><a data-scroll href="#projects">Our Work</a></li>
+                     <li><a data-scroll href="#projects">Our Products</a></li>
                      
                      
                      <li><a data-scroll href="#contact">Contact Us</a></li>
